[tool.poetry]
name = "epicmix"
version = "0.1.0"
description = "A simple python package for the EpicMix Web API."
authors = ["roanraina <roan.raina@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
